--- a/src/app/auth/components/forget-password/forget-password.component.html
+++ b/src/app/auth/components/forget-password/forget-password.component.html
@@ -1,1 +1,35 @@
-<p>forget-password works!</p>
+<div class="container-fluid h-100">
+
+    <form [formGroup]="ForgetPassword" (ngSubmit)="ForgetPass(ForgetPassword)"
+        class="h-100 d-flex justify-content-center align-items-center flex-column gap-3">
+
+        <!-- Title -->
+        <h2 class="w-75 text-start">Forget Password</h2>
+        <h6 class="w-75 text-start">please enter your phone number
+            to reset the password</h6>
+
+        <!-- Phone Input -->
+        <div class="input-group flex-nowrap w-75 ">
+            <span class="input-group-text" id="PhoneNumber"><i class="fa-solid fa-mobile"></i></span>
+            <input formControlName="phone" type="tel" class="form-control py-3" placeholder="Enter your Phone Number"
+                aria-label="PhoneNumber" aria-describedby="PhoneNumber">
+        </div>
+
+        <!-- Error Messages -->
+        <div class="w-75">
+            @if(ForgetPassword.get('phone')?.hasError('required') && ForgetPassword.get('phone')?.touched){
+            <p class="alert alert-danger p-2 m-0 d-block w-100">
+                Phone number is required
+            </p>
+            }
+            @if(ForgetPassword.get('phone')?.hasError('pattern') && ForgetPassword.get('phone')?.touched){
+            <p class="alert alert-danger p-2 m-0 d-block w-100">
+                Incorrect phone number. Please enter an Egyptian number.
+            </p>
+            }
+        </div>
+        <!-- Login Button -->
+        <button class="btn btn-success w-75 py-3">Confirm</button>
+    </form>
+
+</div>
