--- a/src/app/auth/components/auth-layout/auth-layout.component.scss
+++ b/src/app/auth/components/auth-layout/auth-layout.component.scss
@@ -1,5 +1,5 @@
 .bg-main {
-  background-image: url(../../../../assets/images/bgmain.svg);
+  background-image: url(../../../../assets/images/bgmain.jpg);
   background-color: black;
   background-position: center;
   background-size: cover;
@@ -11,7 +11,7 @@
   content: "";
   position: absolute;
   inset: 0;
-  background: rgba(0, 0, 0, 0.5);
+  background: rgba(0, 0, 0, 0.7);
   z-index: -1;
 }
 @media (max-width: 992px) {
