--- a/src/app/auth/components/create-account/create-account.component.html
+++ b/src/app/auth/components/create-account/create-account.component.html
@@ -1,1 +1,88 @@
-<p>create-account works!</p>
+<div class="container-fluid h-100 ">
+
+    <form [formGroup]="createAccountForm" (ngSubmit)="createNewAccount(createAccountForm)"
+        class="h-100 pt-2 d-flex justify-content-center align-items-center flex-column gap-3">
+
+        <!-- Title -->
+        <h2 class="w-75 text-start pt-5">Create Account</h2>
+
+        <!-- FULL NAME -->
+        <div class="input-group flex-nowrap w-75">
+            <span class="input-group-text">
+                <i class="fa-solid fa-user"></i>
+            </span>
+            <input formControlName="full_name" type="text" class="form-control py-3" placeholder="Enter your name">
+        </div>
+
+        <!-- ERRORS -->
+        <div class="w-75">
+            @if(createAccountForm.get('full_name')?.touched &&
+            createAccountForm.get('full_name')?.hasError('required')){
+            <p class="alert alert-danger p-2 m-0">Full name is required</p>
+            }
+        </div>
+
+        <!-- PHONE -->
+        <div class="input-group flex-nowrap w-75">
+            <span class="input-group-text" id="PhoneNumber">
+                <i class="fa-solid fa-mobile"></i>
+            </span>
+            <input formControlName="phone" type="tel" class="form-control py-3" placeholder="Enter your phone number"
+                aria-describedby="PhoneNumber">
+        </div>
+
+        <div class="w-75">
+            @if(createAccountForm.get('phone')?.touched && createAccountForm.get('phone')?.hasError('required')){
+            <p class="alert alert-danger p-2 m-0">Phone number is required</p> }
+
+            @if(createAccountForm.get('phone')?.touched && createAccountForm.get('phone')?.hasError('pattern')){
+            <p class="alert alert-danger p-2 m-0">Enter a valid Egyptian phone number</p> }
+        </div>
+
+        <!-- PASSWORD -->
+        <div class="input-group flex-nowrap w-75 position-relative">
+            <span class="input-group-text" id="Password">
+                <i class="fa-solid fa-key"></i>
+            </span>
+
+            <input formControlName="password" [type]="hide() ? 'password' : 'text'" class="form-control py-3 pe-5"
+                placeholder="Enter your password" aria-describedby="Password">
+
+            <!-- ICON INSIDE INPUT -->
+            <button type="button" class="password-toggle-btn" (click)="clickEvent($event)">
+                <i class="fa-solid" [ngClass]="hide() ? 'fa-eye-slash' : 'fa-eye'"></i>
+            </button>
+        </div>
+
+        <div class="w-75">
+            @if(createAccountForm.get('password')?.touched && createAccountForm.get('password')?.hasError('required')){
+            <p class="alert alert-danger p-2 m-0">Password is required</p> }
+        </div>
+
+        <!-- CONFIRM PASSWORD -->
+        <div class="input-group flex-nowrap w-75 position-relative">
+            <span class="input-group-text">
+                <i class="fa-solid fa-key"></i>
+            </span>
+
+            <input formControlName="password_confirmation" [type]="hide() ? 'password' : 'text'"
+                class="form-control py-3 pe-5" placeholder="Confirm your password">
+
+            <button type="button" class="password-toggle-btn" (click)="clickEvent($event)">
+                <i class="fa-solid" [ngClass]="hide() ? 'fa-eye-slash' : 'fa-eye'"></i>
+            </button>
+        </div>
+
+        <div class="w-75">
+            @if(createAccountForm.hasError('misMatch') && createAccountForm.get('password_confirmation')?.touched){
+            <p class="alert alert-danger p-2 m-0">Passwords do not match</p> }
+        </div>
+        <!-- SUBMIT BUTTON -->
+        <button class="btn btn-success w-75 py-3">Create Account</button>
+        <p>Already have an account?
+            <span><a class="text-danger text-decoration-none" routerLink="/auth/login">Login</a></span>
+        </p>
+
+    </form>
+
+</div>
