--- a/src/app/auth/components/login/login.component.html
+++ b/src/app/auth/components/login/login.component.html
@@ -27,19 +27,24 @@
             }
         </div>
 
-        <!-- Password Input -->
-        <div class="input-group flex-nowrap w-75">
-            <span class="input-group-text" id="Password"><i class="fa-solid fa-key"></i></span>
-            <input formControlName="password" type="password" class="form-control py-3"
-                placeholder="Enter Your Password" aria-label="Password" aria-describedby="Password">
+        <!-- PASSWORD -->
+        <div class="input-group flex-nowrap w-75 position-relative">
+            <span class="input-group-text" id="Password">
+                <i class="fa-solid fa-key"></i> <!-- نفس أيقونة القفل -->
+            </span>
+
+            <input formControlName="password" [type]="hide() ? 'password' : 'text'" class="form-control py-3 pe-5"
+                placeholder="Enter your password" aria-describedby="Password">
+
+            <!-- ICON INSIDE INPUT -->
+            <button type="button" class="password-toggle-btn" (click)="clickEvent($event)">
+                <i class="fa-solid" [ngClass]="hide() ? 'fa-eye-slash' : 'fa-eye'"></i>
+            </button>
         </div>
-        <!-- Error Messages -->
+
         <div class="w-75">
-            @if(loginForm.get('password')?.hasError('required') && loginForm.get('password')?.touched){
-            <p class="alert alert-danger p-2 m-0 d-block w-100">
-                password is required
-            </p>
-            }
+            @if(loginForm.get('password')?.touched && loginForm.get('password')?.hasError('required')){
+            <p class="alert alert-danger p-2 m-0">Password is required</p> }
         </div>
 
         <!-- Remember + Forgot -->
