--- a/src/app/auth/components/new-password/new-password.component.html
+++ b/src/app/auth/components/new-password/new-password.component.html
@@ -1,1 +1,52 @@
-<p>new-password works!</p>
+<div class="container-fluid h-100">
+
+    <form [formGroup]="createAccountForm" (ngSubmit)="createNewAccount(createAccountForm)"
+        class="h-100 d-flex justify-content-center align-items-center flex-column gap-3">
+
+        <!-- Title -->
+        <h2 class="w-75 text-start">New Password</h2>
+        <h6 class="w-75 text-start">Create a new password. Ensure it differs from
+            previous ones for security</h6>
+        <!-- PASSWORD -->
+        <div class="input-group flex-nowrap w-75 position-relative">
+            <span class="input-group-text" id="Password">
+                <i class="fa-solid fa-key"></i>
+            </span>
+
+            <input formControlName="password" [type]="hide() ? 'password' : 'text'" class="form-control py-3 pe-5"
+                placeholder="Enter your password" aria-describedby="Password">
+
+            <!-- ICON INSIDE INPUT -->
+            <button type="button" class="password-toggle-btn" (click)="clickEvent($event)">
+                <i class="fa-solid" [ngClass]="hide() ? 'fa-eye-slash' : 'fa-eye'"></i>
+            </button>
+        </div>
+
+        <div class="w-75">
+            @if(createAccountForm.get('password')?.touched && createAccountForm.get('password')?.hasError('required')){
+            <p class="alert alert-danger p-2 m-0">Password is required</p> }
+        </div>
+
+        <!-- CONFIRM PASSWORD -->
+        <div class="input-group flex-nowrap w-75 position-relative">
+            <span class="input-group-text">
+                <i class="fa-solid fa-key"></i>
+            </span>
+
+            <input formControlName="password_confirmation" [type]="hide() ? 'password' : 'text'"
+                class="form-control py-3 pe-5" placeholder="Confirm your password">
+
+            <button type="button" class="password-toggle-btn" (click)="clickEvent($event)">
+                <i class="fa-solid" [ngClass]="hide() ? 'fa-eye-slash' : 'fa-eye'"></i>
+            </button>
+        </div>
+
+        <div class="w-75">
+            @if(createAccountForm.hasError('misMatch') && createAccountForm.get('password_confirmation')?.touched){
+            <p class="alert alert-danger p-2 m-0">Passwords do not match</p> }
+        </div>
+        <!-- SUBMIT BUTTON -->
+        <button class="btn btn-success w-75 py-3">Continue</button>
+    </form>
+
+</div>
