--- a/src/app/auth/components/enter-otp/enter-otp.component.html
+++ b/src/app/auth/components/enter-otp/enter-otp.component.html
@@ -1,4 +1,4 @@
-<div class="container d-flex flex-column justify-content-center align-items-center h-75">
+<div class="container d-flex flex-column justify-content-center align-items-center h-75 pt-5">
 
     <h5 class="fw-semibold text-center mb-2">
         Please Enter the OTP to your phone number :
