--- a/src/app/auth/components/login/login.component.html
+++ b/src/app/auth/components/login/login.component.html
@@ -1,4 +1,4 @@
-<div class="container-fluid h-100">
+<div class="container-fluid h-100 pt-3">
 
     <form [formGroup]="loginForm" (ngSubmit)="login(loginForm)"
         class="h-100 d-flex justify-content-center align-items-center flex-column gap-3">
