--- a/src/app/features/components/footer/footer.component.html
+++ b/src/app/features/components/footer/footer.component.html
@@ -6,7 +6,7 @@
 
             <!-- Logo + About -->
             <div class="col-md-4">
-                <h4 class="fw-bold mb-3">Foodify</h4>
+                <h4 class="fw-bold mb-3"><img src="../../../../assets/images/Logo.svg" alt=""></h4>
                 <p class="footer-text">
                     The best place to find delicious meals, order your food and enjoy fast delivery.
                 </p>
@@ -46,7 +46,7 @@
             <div class="col-md-3">
                 <h5 class="fw-bold mb-3">Contact</h5>
                 <p class="mb-1"><i class="fa-solid fa-phone"></i> +201000013342</p>
-                <p class="mb-1"><i class="fa-solid fa-envelope"></i> mp7mdFekry.gmail.com</p>
+                <p class="mb-1"><i class="fa-solid fa-envelope"></i>mo7mdFekry.gmail.com</p>
                 <p><i class="fa-solid fa-location-dot"></i> Cairo, Egypt</p>
             </div>
 
