--- a/src/app/features/components/navbar/navbar.component.html
+++ b/src/app/features/components/navbar/navbar.component.html
@@ -3,7 +3,7 @@
 
         <!-- Logo - Left -->
         <a class="navbar-brand d-flex align-items-center" routerLink="">
-            <img src="assets/images/Logo.svg" class="logo" alt="Foodify">
+            <img src="assets/images/Logo.svg" class="logo ps-5" alt="Foodify">
         </a>
 
         <!-- Toggler -->
@@ -49,7 +49,7 @@
             <!-- User Info -->
             <div class="d-flex align-items-center gap-2">
                 <img class="profileImage" src="assets/images/bgmain2.png" alt="">
-                <span class="text-white fw-semibold">MohamedfIKERY</span>
+                <span class="text-white fw-semibold">{{userName()}}</span>
             </div>
 
         </div>
