--- a/src/app/features/components/navbar/navbar.component.scss
+++ b/src/app/features/components/navbar/navbar.component.scss
@@ -59,7 +59,7 @@
   background: #f7f8fc;
   border: none;
   box-shadow: 0 8px 40px rgba(0, 0, 0, 0.1);
-  animation: fadeIn 0.2s ease-out;
+  animation: fadeIn 0.2s;
 }
 .custom-item,
 .logout-item {
